maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:7: error: ')' expected but 'else' found.
    	} else {droite(); if (!(estFaceMur) {avance()} else {gauche(); gauche()}}
                                                       ^